# iris-embedded-python-wrapper

./: 404.html  README.md  _iris_ep_sitehook.py  demo2.py  docker-compose-test-preview.yml  index.html  iris_ep.pth  iris_ep.py  merge.cpf  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitecustomize.py  sitemap.xml  unified.md
.github/workflows/: tests.yml
_iris_ep/: __init__.py  __init__.pyi  _bootstrap.py  _byref.py  _dbapi.py  _dbapi_embedded.py  _dbapi_exceptions.py  _dbapi_facade.py  _dbapi_native.py  _list.py  _runtime_facade.py  _vector.py
docs/: index.md
examples/: fastembed_vector_operations.py  fastembed_vector_search.py
iris/: __init__.py  __init__.pyi  _cli.py  _driver_loader.py
iris_embedded_python/: __init__.py
iris_ep/: __init__.py
iris_utils/: __init__.py  _cli.py  _driver_loader.py  _dynalib.py  _embedded_env.py  _find_libpython.py  _iris_native_proxy.py  _iris_utils.py  _module_exports.py  _runtime.py
scripts/: compare_empty_string_behavior.py  run-pytest-in-iris.sh  test-docker.sh
search/: search_index.json
src/iris/: __init__.py  __init__.pyi
tests/iris/: _dbapi_fakes.py  test_dbapi.py  test_dbapi_e2e.py  test_dbapi_embedded.py  test_dbapi_native.py  test_dbapi_runtime_modes.py  test_driver_loader.py  test_embedded_runtime_e2e.py  test_import_contracts.py  test_iris.py  test_iris_list.py  test_native_proxy.py  test_native_proxy_string_normalization.py
tests/iris_utils/: test_cli.py
