[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "iris-embedded-python-wrapper"
version = "0.6.1"
description = "Wrapper for embedded python on InterSystems IRIS"
readme = "README.md"
authors = [
    { name = "grongier", email = "guillaume.rongier@intersystems.com" },
]
keywords = ["iris", "intersystems", "python", "embedded"]
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities"
]
dependencies = [
    "intersystems-irispython>=5.0.0"
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.6",
]

[project.urls]
homepage = "https://github.com/grongierisc/iris-embedded-python-wrapper"
documentation = "https://github.com/grongierisc/iris-embedded-python-wrapper/blob/main/README.md"
repository = "https://github.com/grongierisc/iris-embedded-python-wrapper"
issues = "https://github.com/grongierisc/iris-embedded-python-wrapper/issues"

[tool.setuptools.packages.find]
include = [
    "iris",
    "iris.*",
    "iris_utils",
    "iris_utils.*",
    "iris_embedded_python",
    "iris_embedded_python.*",
    "_iris_ep",
    "_iris_ep.*",
]

[tool.setuptools]
py-modules = ["iris_ep", "_iris_ep_sitehook"]

[tool.setuptools.package-data]
"*" = ["*"]

[project.scripts]
bind_iris = "iris_utils._cli:bind"
unbind_iris = "iris_utils._cli:unbind"

[tool.ruff]
target-version = "py38"
line-length = 100
